@@ -4,12 +4,11 @@ import eu.europeana.enrichment.api.external.DereferenceResultStatus;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
-import javax.xml.bind.annotation.XmlAccessType;
-import javax.xml.bind.annotation.XmlAccessorType;
-import javax.xml.bind.annotation.XmlElement;
-import javax.xml.bind.annotation.XmlElements;
-import javax.xml.bind.annotation.XmlRootElement;
+import jakarta.xml.bind.annotation.XmlAccessType;
+import jakarta.xml.bind.annotation.XmlAccessorType;
+import jakarta.xml.bind.annotation.XmlElement;
+import jakarta.xml.bind.annotation.XmlElements;
+import jakarta.xml.bind.annotation.XmlRootElement;
 
 /**
  * Wrapper of {@link EnrichmentBase}, used for easier (de)serialization.
@@ -73,7 +72,7 @@ public class EnrichmentResultBaseWrapper {
    */
   public static List<EnrichmentResultBaseWrapper> createEnrichmentResultBaseWrapperList(
       Collection<List<EnrichmentBase>> resultList, DereferenceResultStatus dereferenceStatus) {
-    return resultList.stream().map(item -> new EnrichmentResultBaseWrapper(item, dereferenceStatus)).collect(Collectors.toList());
+    return resultList.stream().map(item -> new EnrichmentResultBaseWrapper(item, dereferenceStatus)).toList();
   }
 
   public DereferenceResultStatus getDereferenceStatus() {
